# horcrust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-client  README.md  build.rs  docker-compose.yml
.github/workflows/: CI.yml
horcrust/: Cargo.toml  build.rs
horcrust-client/: Cargo.toml
horcrust-client/src/: main.rs
horcrust-server/: Cargo.toml
horcrust-server/src/: lib.rs  main.rs  shares_db.rs
horcrust/src/: commands.proto  connection.rs  lib.rs  messages.rs  messages_utils.rs  secret_sharing.rs
src/: commands.proto  connection.rs  lib.rs  messages.rs  secret_sharing.rs  shares_db.rs
test/: horcrust.rs
