[package]
name = "horcrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rcgen = "0.11"
prost-build = { version = "^0.11.9" }

[dependencies]
anyhow = "~1.0"
prost = "^0.11.9"
clap = {version = "~4.4", features = ["derive"]}
rcgen = "0.11"
log = "~0.4"
env_logger = "~0.10"
rand = "~0.8"
hex = "0.4.2"
aes-gcm = "0.10.2"

