[package]
name = "horcrust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horcrust = {path = "../horcrust"}
env_logger = "~0.10"
anyhow = "~1.0"
rand = "~0.8"
clap = {version = "~4.4", features = ["derive"]}
log = "~0.4"
