[package]
name = "horcrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = "^0.11.9" }

[dependencies]
# todo: as a lib this should be using thiserror.
anyhow = "~1.0"
prost = "^0.11.9"
log = "~0.4"
rand = "~0.8"
hex = "0.4.2"
aes-gcm = {version = "0.10.2", features = ["std"]}

